- added css variables and updated most elements/classes to use them - added max-width and centering to body element in style.css - added minor footer styling when in mobile - updated one of the divs to have a min-height so it doesn't disappear on mobile - updated orms image to be an img element rather than a background image - fixed href paths in navbar - updated div elements in wrapper classes to have styling in style.css

--- a/limbo-zone.nekoweb.org/style.css
+++ b/limbo-zone.nekoweb.org/style.css
@@ -1,5 +1,19 @@
 /* css on the archived sadgrl website (with a lot of edits) */
 
+/* css variables. will allow ease of switching site themes */
+/* add more or less variables as needed */
+:root {
+    /* background color of the main content "boxes" */
+    --main-bg-color: #222927;
+    /* background color of navbar and footer */
+    --bar-bg-color: #151A18;
+    /* color of font, navbar links, and footer links */
+    --main-color: #E6EBD7;
+    /* color of links in main content */
+    --a-color: #799E85; /* also color of navbar links when hovering */
+    --a-hover-color: #9cc9aa;
+}
+
 ::selection { color: white; background: #799E85; }
 
 /* scroll, box-sizing to include padding + border in an element's width/height -- future eva here wtf did i write */
@@ -13,15 +27,15 @@
 
 body {
     font-family: "Comic Sans MS", cursive;
-    margin: 0;
-    color: #E6EBD7;
+    margin: 0 auto;
+    color: var(--main-color);
     background-color: #0E100E;
     background-image: url(images/background.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    max-width: 1200px; /* prevents content from becoming too wide. can be changed as needed */
 }
-
 
 main {
     max-width: 90%;
@@ -29,11 +43,11 @@ main {
 }
 
 a {
-    color: #799E85;
+    color: var(---a-color);
 }
 
-a:hover {
-    color: #9cc9aa;
+a:hover, a:focus {
+    color: var(--a-hover-color);
     font-weight: bold;
 }
 
@@ -50,7 +64,7 @@ a:hover {
 }
 
 #navbar {
-    background-color: #151A18;
+    background-color: var(--bar-bg-color);
     margin:0 5%;
     padding: 13px;
     display: flex;
@@ -60,13 +74,13 @@ a:hover {
 }
 
 #navbar a {
-    color: #E6EBD7;
+    color: var(--main-color);
     padding: 2px;
     text-decoration: none;
 }
 
 #navbar a:hover {
-    color: #799E85;
+    color: var(--a-color);
 }
 
 #navbar .collapseIcon {
@@ -81,10 +95,30 @@ a:hover {
 .wrapper2 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    }
+}
+
+/* adds margins, padding, etc. to div elements inside wrapper classes */
+.wrapper > div:not(:has(img)), .wrapper2 > div {
+    background-color: var(--main-bg-color);
+    margin: 10px;
+}
+.wrapper > div:has(p), .wrapper2 > div:has(p) {
+    padding: 30px;
+}
+.wrapper > div > img {
+    width: 100%;
+}
+.wrapper2 > div {
+    text-align: center;
+}
+
+/* makes it so images that have no anti-aliasing still render sharp when resized */
+.img-render-crisp {
+    image-rendering: crisp-edges;
+}
 
 footer {
-    background-color: #151A18;
+    background-color: var(--bar-bg-color);
     height: 110px;
     padding: 15px;
     margin: 60px 5%;
@@ -93,7 +127,7 @@ footer {
 
 footer a {
     text-decoration: none;
-    color: #E6EBD7;
+    color: var(--main-color);
 }
 
 h1 {
@@ -117,6 +151,7 @@ small {
 
 @media only screen and (max-width: 600px) {
 
+    /* navbar always stays on screen when user scrolls */
     #headerArea {
       position: sticky;
       top: 0;
@@ -177,5 +212,9 @@ small {
 
     .wrapper2 {
         grid-template-columns: 100%;
+    }
+
+    footer {
+        margin-bottom: 10px;
     }
 }
